<?xml version="1.0"?>
<package format="2">

  <name>gazebo_rad_msgs</name>
  <version>1.0.0</version>
  <description>The gazebo_rad_msgs package</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>

  <export>
  </export>

</package>
